# online-events-backend

./: .app.env.example  .gitlab-ci.yml  README.md  docker-compose.dev.yml  docker-compose.yml
app/: .dockerignore  .env.example  .gitignore  Dockerfile  entrypoint-asgi.sh  entrypoint-wsgi.sh  manage.py  pyproject.toml  setup.cfg
app/auth/: mails.py
app/auth/api/: serializers.py  urls.py  views.py
app/authentication/api/: serializers.py  urls.py  views.py
app/chats/: consumers.py  routing.py
app/core/: __init__.py  celery.py  middlewares.py  settings.py  tasks.py  urls.py  utils.py  wsgi.py
app/entrypoints/: entrypoint-celery-beat.sh  entrypoint-celery-worker.sh  entrypoint-dev-celery.sh  entrypoint-dev.sh
app/events/: admin.py  models.py
app/events/api/: permissions.py  serializers.py  urls.py  views.py
app/events/migrations/: 0001_initial.py  0002_event_attendees_alter_event_organizer.py  0003_alter_event_options_event_started_at.py  0004_alter_event_attendees.py
app/online_events/: __init__.py  asgi.py  middlewares.py  schema.py  settings.py  urls.py  wsgi.py
app/talks/: admin.py  apps.py  mails.py  models.py  signals.py
app/talks/api/: permissions.py  serializers.py  urls.py  views.py
app/talks/migrations/: 0001_initial.py  0002_talk_stream_key.py
app/tests/: conftest.py
app/tests/auth/: conftest.py  test_endpoints.py
app/tests/events/: conftest.py  factories.py  test_endpoints.py
app/tests/talks/: conftest.py  factories.py  test_endpoints.py
app/tests/users/: conftest.py  factories.py  (+1 more)
app/users/: admin.py  models.py  tasks.py
(+30 files in other folders)
