[tool.poetry]
name = "online-events-backend"
version = "0.1.0"
description = ""
authors = ["Khaled Farhat <khaled.farhat.cpp@gmail.com>"]
readme = "README.md"
packages = [{include = "online_events_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
django-environ = "^0.10.0"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
