[tool.poetry]
name = "online-events-backend"
version = "0.1.0"
description = ""
authors = ["Khaled Farhat <khaled.farhat.cpp@gmail.com>"]
readme = "README.md"
packages = [{include = "online_events_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
django-environ = "^0.10.0"
pillow = "^9.4.0"
django-rest-knox = "^4.2.0"
drf-spectacular = "^0.26.1"
django-cors-headers = "^4.0.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
